--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ readme = "README.md"
 license-file = "LICENSE.txt"
 homepage = "https://github.com/tnahs/readstor_rs"
 repository = "https://github.com/tnahs/readstor_rs"
-keywords = ["apple", "macos", "apple-books", "highlights"]
+keywords = ["apple", "macos", "books", "ibooks", "highlights"]
 categories = ["command-line-utilities"]
 edition = "2021"
+exclude = ["extra/*", "scripts/*", ".vscode/*"]
 
 [dependencies]
 anyhow = "1.0"
