--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/tnahs/readstor_rs"
 keywords = ["apple", "macos", "books", "ibooks", "highlights"]
 categories = ["command-line-utilities"]
 edition = "2021"
-exclude = ["extra/*", "scripts/*", ".vscode/*"]
+exclude = ["scripts/*", ".vscode/*"]
 
 [dependencies]
 anyhow = "1.0"
