--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "chrono",
         "clippy",
         "datetime",
+        "deps",
         "endfor",
         "epub",
         "epubcfi",
@@ -20,8 +21,8 @@
         "structopt",
         "structs",
         "sysinfo",
-        "tera",
         "templating",
+        "tera",
         "thiserror",
         "trunc"
     ],
