Update license, rename 'items' to 'data', documentation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "readstor"
 version = "0.2.0"
 description = "A CLI for Apple Books annotations"
 readme = "README.md"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 homepage = "https://github.com/tnahs/readstor"
 repository = "https://github.com/tnahs/readstor"
 keywords = ["apple", "macos", "books", "ibooks", "highlights"]
