--- a/.cargo/config
+++ b/.cargo/config
@@ -7,7 +7,7 @@ lint = """\
         --warn clippy::pedantic \
         --warn clippy::cargo \
     """
-docs = "doc --no-deps"
+docs = "doc --no-deps --open"
 
 [env]
 DEV_READSTOR = "DEV_READSTOR"
