--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "readstor"
-version = "0.1.2"
+version = "0.2.0"
 description = "A CLI for Apple Books annotations"
 readme = "README.md"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 homepage = "https://github.com/tnahs/readstor"
 repository = "https://github.com/tnahs/readstor"
 keywords = ["apple", "macos", "books", "ibooks", "highlights"]
@@ -12,31 +12,31 @@ edition = "2021"
 exclude = ["scripts/*", ".vscode/*"]
 
 [dependencies]
-anyhow = "1.0"
-glob = "0.3"
-home = "0.5"
-log = "0.4"
-loggerv = "0.7"
-once_cell = "1.8"
-plist = "1.0"
-regex = "1.5"
-rusqlite = "0.26"
-serde_json = "1.0"
-sysinfo = "0.22"
-tera = "1.15"
-thiserror = "1.0"
+color-eyre = "0.6.0"
+glob = "0.3.0"
+home = "0.5.3"
+log = "0.4.14"
+loggerv = "0.7.2"
+once_cell = "1.9.0"
+plist = "1.3.1"
+regex = "1.5.4"
+rusqlite = "0.26.3"
+serde_json = "1.0.78"
+sysinfo = "0.23.0"
+tera = "1.15.0"
+thiserror = "1.0.30"
 
 [dependencies.chrono]
-version = "0.4"
+version = "0.4.19"
 features = ["serde"]
 
-[dependencies.serde]
-version = "1.0"
+[dependencies.clap]
+version = "3.0.13"
 features = ["derive"]
 
-[dependencies.structopt]
-version = "0.3"
-default-features = false
+[dependencies.serde]
+version = "1.0.136"
+features = ["derive"]
 
 [dev-dependencies]
-assert_cmd = "2.0"
+assert_cmd = "2.0.4"
