--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/tnahs/readstor"
 keywords = ["apple", "macos", "books", "ibooks", "highlights"]
 categories = ["command-line-utilities"]
 edition = "2021"
-exclude = ["scripts/*", ".vscode/*"]
+exclude = ["scripts/*", ".vscode/*", "docs/*", "TODO.md"]
 
 [dependencies]
 color-eyre = "0.6.0"
