--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,16 @@ exclude = ["scripts/*", ".vscode/*", "docs/*", "TODO.md"]
 
 [dependencies]
 color-eyre = "0.6.0"
+env_logger = "0.9.0"
 glob = "0.3.0"
 home = "0.5.3"
 log = "0.4.14"
-loggerv = "0.7.2"
 once_cell = "1.9.0"
 plist = "1.3.1"
 regex = "1.5.4"
 rusqlite = "0.26.3"
-serde_json = "1.0.78"
-sysinfo = "0.23.0"
+serde_json = "1.0.79"
+sysinfo = "0.23.2"
 tera = "1.15.0"
 thiserror = "1.0.30"
 
@@ -31,7 +31,7 @@ version = "0.4.19"
 features = ["serde"]
 
 [dependencies.clap]
-version = "3.0.13"
+version = "3.0.14"
 features = ["derive"]
 
 [dependencies.serde]
