Added 'quiet' flag, ConfigOptions, Annotation sorting, minor refactoring

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "thiserror",
         "TMPDIR",
         "trunc",
+        "walkdir",
         "yrgg"
     ],
     "cSpell.ignoreWords": [
