Added RenderMode, more cli options

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,32 @@
 {
     "files.associations": {
-        "default.txt": "jinja",
+        "default-*.md": "jinja",
     },
     "cSpell.enabled": true,
     "cSpell.words": [
         "applebooks",
+        "Audiobooks",
         "chrono",
         "clippy",
+        "containermanagerd",
         "datetime",
         "deps",
+        "deunicode",
         "endfor",
         "epub",
         "epubcfi",
         "fract",
+        "ibooks",
+        "ioreg",
+        "IOUSB",
         "loggerv",
+        "macfuse",
         "nsecs",
+        "osascript",
         "readstor",
         "rusqlite",
         "rustdoc",
+        "strftime",
         "structopt",
         "structs",
         "sysinfo",
@@ -26,8 +35,10 @@
         "termcolor",
         "thiserror",
         "TMPDIR",
+        "tnahs",
         "trunc",
         "walkdir",
+        "xattrs",
         "yrgg"
     ],
     "cSpell.ignoreWords": [
