--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,8 @@ edition = "2021"
 exclude = ["scripts/*", ".vscode/*", "docs/*", "TODO.md"]
 
 [dependencies]
-color-eyre = "0.6.0"
+color-eyre = "0.6.1"
+deunicode = "1.3.1"
 env_logger = "0.9.0"
 glob = "0.3.0"
 home = "0.5.3"
@@ -22,7 +23,7 @@ plist = "1.3.1"
 regex = "1.5.4"
 rusqlite = "0.26.3"
 serde_json = "1.0.79"
-sysinfo = "0.23.2"
+sysinfo = "0.23.4"
 tera = "1.15.0"
 thiserror = "1.0.30"
 walkdir = "2.3.2"
@@ -32,7 +33,7 @@ version = "0.4.19"
 features = ["serde"]
 
 [dependencies.clap]
-version = "3.0.14"
+version = "3.1.2"
 features = ["derive"]
 
 [dependencies.serde]
