--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,10 @@ glob = "0.3.0"
 home = "0.5.3"
 log = "0.4.14"
 once_cell = "1.9.0"
+pathdiff = "0.2.1"
 plist = "1.3.1"
 regex = "1.5.4"
-rusqlite = "0.26.3"
+rusqlite = "0.27.0"
 serde_json = "1.0.79"
 sysinfo = "0.23.4"
 tera = "1.15.0"
