--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: ci
 
 on:
-  workflow_call:
   schedule:
     - cron: "0 0 * * 1" # 0:00 on Mondays
+  workflow_call:
+  pull_request:
   push:
 
 jobs:
