--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 homepage = "https://github.com/tnahs/readstor"
 repository = "https://github.com/tnahs/readstor"
-keywords = ["apple", "macos", "books", "ibooks", "highlights"]
+keywords = ["apple", "books", "ibooks", "highlights", "macos"]
 categories = ["command-line-utilities"]
 edition = "2021"
 exclude = ["docs/*", "guide/*", "scripts/*", "TODO.md"]
@@ -24,11 +24,11 @@ plist = "1.3.1"
 regex = "1.5.4"
 rusqlite = "0.27.0"
 serde_json = "1.0.79"
+serde_yaml = "0.9.10"
 sysinfo = "0.23.4"
 tera = "1.15.0"
 thiserror = "1.0.30"
 walkdir = "2.3.2"
-serde_yaml = "0.9.10"
 
 [dependencies.chrono]
 version = "0.4.19"
