--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ tags
 # End of https://www.toptal.com/developers/gitignore/api/rust,macos,vim
 
 # mdBook
-book/book/
+book/build/
 
 # Misc 
 release/
