--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,7 @@
 name: docs
 
 on:
-  workflow_dispatch:
   push:
-    tags:
-      - "v*"
 
 jobs:
   book:
@@ -19,8 +16,17 @@ jobs:
           mdbook-version: "latest"
       - name: Build book
         run: mdbook build ./book
-      - name: Deploy book
+      - name: Deploy to latest
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./book/build
+          destination_dir: latest
+      - name: Deploy to dev
+        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./book/build
+          destination_dir: dev
