--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["command-line-utilities"]
 edition = "2021"
 include = [
   "src/**/*.rs",
-  "templates/flat/template.jinja2", # Default template
+  "templates/basic/basic.jinja2", # Default template
   "README.md",
   "extra/logo/logo-256.png",
   "LICENSE-APACHE",
@@ -19,26 +19,26 @@ include = [
 ]
 
 [dependencies]
-color-eyre = "0.6.1"
-deunicode = "1.3.1"
-env_logger = "0.9.0"
+color-eyre = "0.6.2"
+deunicode = "1.3.2"
+env_logger = "0.9.1"
 glob = "0.3.0"
 home = "0.5.3"
-log = "0.4.14"
-once_cell = "1.9.0"
+log = "0.4.17"
+once_cell = "1.15.0"
 pathdiff = "0.2.1"
 plist = "1.3.1"
-regex = "1.5.4"
-rusqlite = "0.27.0"
-serde_json = "1.0.79"
-serde_yaml = "0.9.10"
-sysinfo = "0.23.4"
-tera = "1.15.0"
-thiserror = "1.0.30"
+regex = "1.6.0"
+rusqlite = "0.28.0"
+serde_json = "1.0.85"
+serde_yaml = "0.9.13"
+sysinfo = "0.26.4"
+tera = "1.17.1"
+thiserror = "1.0.37"
 walkdir = "2.3.2"
 
 [dependencies.chrono]
-version = "0.4.19"
+version = "0.4.22"
 features = ["serde"]
 
 [dependencies.clap]
@@ -46,7 +46,7 @@ version = "4.0"
 features = ["derive"]
 
 [dependencies.serde]
-version = "1.0.136"
+version = "1.0.145"
 features = ["derive"]
 
 [dev-dependencies]
