--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,10 +30,8 @@ pathdiff = "0.2.1"
 plist = "1.3.1"
 regex = "1.6.0"
 rusqlite = "0.28.0"
-serde_json = "1.0.85"
 serde_yaml = "0.9.13"
 sysinfo = "0.26.4"
-tera = "1.17.1"
 thiserror = "1.0.37"
 walkdir = "2.3.2"
 
@@ -45,9 +43,21 @@ features = ["serde"]
 version = "4.0"
 features = ["derive"]
 
+[dependencies.indexmap]
+version = "1.9.1"
+features = ["serde"]
+
 [dependencies.serde]
 version = "1.0.145"
 features = ["derive"]
+
+[dependencies.serde_json]
+version = "1.0.85"
+features = ["preserve_order"]
+
+[dependencies.tera]
+version = "1.17.1"
+features = ["preserve_order"]
 
 [dev-dependencies]
 assert_cmd = "2.0.4"
