--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ include = [
   "LICENSE-MIT",
 ]
 
+[lib]
+name = "lib"
+path = "src/lib/lib.rs"
+
 [dependencies]
 color-eyre = "0.6.2"
 deunicode = "1.3.2"
