ci: update tags syntax, enable `workflow_dispatch`

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,11 +1,12 @@
 name: docs
 
 on:
+  workflow_dispatch:
   push:
     branches:
-     - main
+      - main
     tags:
-     - v[0-9]+.[0-9]+.[0-9]+
+      - v[0-9]+.[0-9]+.[0-9]+
 
 jobs:
   book:
