--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,5 +60,9 @@ version = "1.0.91"
 version = "1.17.1"
 features = ["builtins"]
 
+[dependencies.uuid]
+version = "1.3.0"
+features = ["v4", "fast-rng"]
+
 [dev-dependencies]
 assert_cmd = "2.0.7"
