--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,14 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
+  rev: v5.0.0
   hooks:
-  - id: trailing-whitespace
-  - id: end-of-file-fixer
-  - id: check-toml
-  - id: check-yaml
-  - id: check-shebang-scripts-are-executable
-  - id: check-executables-have-shebangs
-    exclude: ^(data/databases)
   - id: check-added-large-files
     exclude: ^(data/ios)
+  - id: check-executables-have-shebangs
+    exclude: ^(data/ios)
+  - id: check-shebang-scripts-are-executable
+    exclude: ^(data/databases)
+  - id: check-toml
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
