--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,3 +66,21 @@ features = ["v4", "fast-rng"]
 
 [dev-dependencies]
 assert_cmd = "2.0.7"
+
+[lints.rust]
+future_incompatible = "warn"
+missing_copy_implementations = "warn"
+missing_debug_implementations = "warn"
+missing_docs = "warn"
+rust_2018_idioms = "warn"
+rust_2018_compatibility = "warn"
+rust_2021_compatibility = "warn"
+
+[lints.clippy]
+all = "warn"
+pedantic = "warn"
+module_name_repetitions = "allow"
+multiple_crate_versions = "allow"
+
+[lints.rustdoc]
+private_intra_doc_links = "allow"
