--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,47 +25,47 @@ name = "lib"
 path = "src/lib/lib.rs"
 
 [dependencies]
-color-eyre = "0.6.2"
-deunicode = "1.3.3"
-env_logger = "0.10.0"
-glob = "0.3.0"
-log = "0.4.17"
-once_cell = "1.16.0"
-pathdiff = "0.2.1"
-plist = "1.3.1"
-regex = "1.7.0"
-rusqlite = "0.28.0"
-serde_yaml = "0.9.16"
-sysinfo = "0.27.1"
-textwrap = "0.16.0"
-thiserror = "1.0.38"
-walkdir = "2.3.2"
+color-eyre = "0.6"
+deunicode = "1"
+env_logger = "0.11"
+glob = "0.3"
+log = "0.4"
+once_cell = "1"
+pathdiff = "0.2"
+plist = "1"
+regex = "1"
+rusqlite = "0.32"
+serde_yaml_ng = "0.10"
+sysinfo = "0.33"
+textwrap = "0.16"
+thiserror = "2"
+walkdir = "2"
 
 [dependencies.chrono]
-version = "0.4.23"
+version = "0.4"
 features = ["serde"]
 
 [dependencies.clap]
-version = "4.0"
+version = "4"
 features = ["derive"]
 
 [dependencies.serde]
-version = "1.0.151"
+version = "1"
 features = ["derive"]
 
 [dependencies.serde_json]
-version = "1.0.91"
+version = "1"
 
 [dependencies.tera]
-version = "1.17.1"
+version = "1"
 features = ["builtins"]
 
 [dependencies.uuid]
-version = "1.3.0"
+version = "1"
 features = ["v4", "fast-rng"]
 
 [dev-dependencies]
-assert_cmd = "2.0.7"
+assert_cmd = "2"
 
 [lints.rust]
 future_incompatible = "warn"
