--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,8 +77,8 @@ rust_2018_compatibility = "warn"
 rust_2021_compatibility = "warn"
 
 [lints.clippy]
-all = "warn"
-pedantic = "warn"
+all = { level = "warn", priority = -1 }
+pedantic = { level = "warn", priority = -1 }
 module_name_repetitions = "allow"
 multiple_crate_versions = "allow"
 
