--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,25 +13,21 @@ jobs:
     name: Build & Deploy Book
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Install mdBook
-        uses: peaceiris/actions-mdbook@v1
+        uses: peaceiris/actions-mdbook@v2
         with:
           mdbook-version: "latest"
-      - name: Build book
+
+      - name: Build
         run: mdbook build ./book
-      - name: Deploy to latest
-        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        uses: peaceiris/actions-gh-pages@v3
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./book/build
-          destination_dir: latest
-      - name: Deploy to dev
-        if: ${{ !startsWith(github.ref, 'refs/tags/v') }}
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./book/build
-          destination_dir: dev
+          # Tagged commits go to '/latest' and un-tagged commits go to '/dev'.
+          destination_dir: ${{ startsWith(github.ref, 'refs/tags/v') && 'latest' || 'dev' }}
