--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,6 @@ once_cell = "1"
 pathdiff = "0.2"
 plist = "1"
 regex = "1"
-rusqlite = "0.32"
 serde_yaml_ng = "0.10"
 sysinfo = "0.33"
 textwrap = "0.16"
@@ -48,6 +47,10 @@ features = ["serde"]
 [dependencies.clap]
 version = "4"
 features = ["derive"]
+
+[dependencies.rusqlite]
+version = "0.32"
+features = ["bundled"]
 
 [dependencies.serde]
 version = "1"
